--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,7 +4,6 @@
 Paleta de cores
 verde: #49a09d
 lilás: #5f2c82
-
 */
 
 * {
@@ -38,6 +37,8 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
