--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,7 +7,7 @@ lilás: #5f2c82
 */
 
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -34,7 +34,7 @@ section#login {
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: width .3s, height .3s;
@@ -59,5 +59,57 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height:40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo >label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:#49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #3a7e7b;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:#5bd6d0 ;
+    color: #1d3f3e;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    padding-top: 7px;
+    margin-top: 5px;
+}
+
+form > a.botao:hover {
+   background-color: #5bd6d0;
+}
+
+form > a.botao > i {
     font-size: 0.8em;
 }
