--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,10 +28,8 @@ main {
 section#login {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 50%;    
     overflow: hidden;
-
     background-color: white;
     width: 250px;
     height: 515px;
@@ -39,6 +37,7 @@ section#login {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem {
@@ -64,15 +63,39 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height:40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
-div.campo >label {
+div.campo > label {
     display: none;
+}
+
+div.campo > span {
+    color: white;   
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color:#94cfcd;
+    font-size: 1em;
+    width: calc(100% - 20%) ;
+    height: 100%;    
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px) ;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 form > input[type=submit] {
@@ -97,8 +120,7 @@ form > a.botao {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    background-color:#5bd6d0 ;
-    color: #1d3f3e;
+    color: #316e6c;
     border: 1px solid #49a09d;
     border-radius: 5px;
     text-decoration: none;
@@ -110,6 +132,6 @@ form > a.botao:hover {
    background-color: #5bd6d0;
 }
 
-form > a.botao > i {
+form > a.botao > span {
     font-size: 0.8em;
 }
